syntax = "proto3";
package v1;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";
import "staples/v1/stats.proto";

message ScanRequest {
  TimeRange timestamp = 1 [ (buf.validate.field).required = true ];
  Filters filters = 2 [ (buf.validate.field).required = true ];
}

message ScanResponse { bytes record = 1; }

message TimeRange {
  google.protobuf.Timestamp start = 1 [ (buf.validate.field).required = true ];
  google.protobuf.Timestamp end = 2 [ (buf.validate.field).required = true ];
}

message KeyValue {
  string key = 1;
  string value = 2;
}

message Filters {
  repeated Filter list = 1;
  // columns returned
  repeated Projection projection = 2;

  enum Projection {
    unknown = 0;
    timestamp = 1;
    id = 2;
    bounce = 3;
    session = 4;
    view = 5;
    duration = 6;

    browser = 19;
    browser_version = 20;
    city = 26;
    country = 23;
    device = 18;
    domain = 25;
    entry_page = 9;
    event = 7;
    exit_page = 10;
    host = 27;
    os = 21;
    os_version = 22;
    page = 8;
    referrer = 12;
    region = 24;
    source = 11;
    utm_campaign = 15;
    utm_content = 16;
    utm_medium = 14;
    utm_source = 13;
    utm_term = 17;
  }
}

message Metadata {
  repeated Column columns = 1;
  uint64 min = 2;
  uint64 max = 3;
  string id = 4;

  message Column {
    string name = 1;
    uint32 num_rows = 2;
    uint32 fst_offset = 4;
    uint64 offset = 5;
    uint32 size = 6;
    uint32 raw_size = 7;
  }

  message Chunk {
    uint64 offset = 1;
    uint64 size = 2;
  }
}